git for all